--- a/assets/tables.html
+++ b/assets/tables.html
@@ -348,22 +348,22 @@
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                   <thead>
                     <tr>
-                      <th>Name</th>
-                      <th>Position</th>
-                      <th>Office</th>
-                      <th>Age</th>
-                      <th>Start date</th>
-                      <th>Salary</th>
+                      <th class="text-center">Name</th>
+                      <th class="text-center">Position</th>
+                      <th class="text-center">Office</th>
+                      <th class="text-center">Age</th>
+                      <th class="text-center">Start date</th>
+                      <th class="text-center">Salary</th>
                     </tr>
                   </thead>
                   <tfoot>
                     <tr>
-                      <th>Name</th>
-                      <th>Position</th>
-                      <th>Office</th>
-                      <th>Age</th>
-                      <th>Start date</th>
-                      <th>Salary</th>
+                      <th class="text-center">Name</th>
+                      <th class="text-center">Position</th>
+                      <th class="text-center">Office</th>
+                      <th class="text-center">Age</th>
+                      <th class="text-center">Start date</th>
+                      <th class="text-center">Salary</th>
                     </tr>
                   </tfoot>
                   <tbody>
